Fixed the layout bug where the title kept disapearing

--- a/style.css
+++ b/style.css
@@ -6,35 +6,22 @@ body{
     background: linear-gradient(180deg, #d53369 0%, #daae51 100%);
     background-attachment: fixed;
     background-repeat: no-repeat;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 h1{
-    font-size: 50px;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color:#d53369;
-    padding: 20px;
-
-}
-
-.title{
     color: whitesmoke;
-    font-family: 'Marck Script', cursive;
     font-size: 120px;
-    padding: 0px;
-    margin: 10px;
+    text-align: center;
+    font-family: 'Marck Script', cursive;
+    margin: 20px;
 }
 
 main{
     width: 60%;
+    margin: 0 auto;
     background-color:#ECC8AF;
     border-radius: 10px;
     position: relative;
-    margin-bottom: 50px;
 }
 
 #win-container{
@@ -69,7 +56,7 @@ button{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: auto;
+    margin: 0 auto;
     padding: 20px;
     flex-wrap: wrap;
     perspective: 1000px;
@@ -108,4 +95,3 @@ button{
 .front{
     transform: rotateY(180deg);
 }
-
